# StaticServer

./: BUILDME.md  CMakeLists.txt  LICENSE  Makefile  README  README.md  build.sh
include/: config.h  file_utils.h  license_header.h  server.h
public/: index.html
src/: file_utils.cpp  main.cpp  server.cpp
tests/: test_config.cpp  test_file_utils.cpp  test_integration.cpp  test_server.cpp  test_utils.hpp
